# mediagent-hack

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  alitodo.md  docker-compose.yml  pyproject.toml
data/: mediagent.db
docs/: architecture.md
mockup_data/analytics/: fake_conversation.txt
src/: config.py  main.py
src/agent/: care_router.py  conversation.py  doctor_matcher.py  pipeline.py  post_call.py  summary.py  triage.py  vocal_pipeline.py
src/analytics/: analyze_call.py  call_summarizer.py  generate_call_summary.py  lead_qualifier.py  stats.py
src/models/: dede  schemas.py
src/tools/: data_generate.py  data_store.py  scheduling.py  voice.py
tests/: __init__.py  analyze_call.py  test_analyze_call.py  test_call_summarizer.py  test_generate_call_summary.py  test_generate_clinical_summary.py
