[project]
name = "mediagent-hack"
version = "0.1.0"
description = "Agent IA de pré-tri médical — Hackathon Hand-e"
requires-python = ">=3.11"
dependencies = [
    "openhosta",
    "pydantic>=2.0",
    "openai",
    "python-dotenv",
    "sounddevice>=0.5.5",
    "soundfile>=0.13.1",
    "numpy>=2.4.3",
]

[tool.setuptools.packages.find]
where = ["."]

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
]
